--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -1,44 +1,59 @@
 .shop-container{
     display: grid;
     grid-template-columns: 4fr 1fr;
-    margin: 20px;
+    margin-left: 10px;
 }
 .products-container{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 45px;
-    margin: 50px;
+    gap: 20px;
+    margin-left: 50px;
     padding: 20px;
 }
 .cart-container{
     background: rgb(217, 230, 235);
-    margin-top: 50px ;
-    margin-right: 50px;
+    margin-top: 20px;
+    margin-right: 100px;
     border: 2px solid gray;
     border-radius: 10px;
     padding-top: 20px;
-    padding-left: 50px;
-    width: 100%;
+    width: 90%;
 }
 
-.question-answer-container{
-    margin: 50px;
-    padding: 150px;
+.bonus-container{
+    width: 95%;
+    margin: 20px;
+    padding: 10px;
+    background-color: lightgray;
 }
 
-@media screen and (max-width:1100px) {
+.bonus{
+    text-align: justify;
+}
+@media screen and (max-width:1100px)
+{
     .products-container{
         grid-template-columns: repeat(2, 1fr);
     }
     .cart-container{
         width: 100%;
     }
+    .bonus-container{
+        width: 100%;
+    }
 }
-@media screen and (max-width:725px) {
+
+@media screen and (max-width: 480px) {
     .products-container{
         grid-template-columns: repeat(1, 1fr);
+        width: 100%;
     }
     .cart-container{
         width: 100%;
     }
+    .bonus-container{
+        width: 100%;
+    }
 }
+
+
